Parser/.antlr/scenarioParser.java
// Generated from c://Users//Mathis//Documents//GitHub//PJ_Commande//scenario//scenario.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class scenarioParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, EMPTY_LINE=5, CONTENT=6, SEP=7, SIGN=8, 
		NUMBER=9, WORD=10, DIGIT=11, HTTP=12, HTTPS=13, PATH=14, EXTENSION=15, 
		WS=16, STAR=17, NL=18, IMAGE=19, IMAGE3D=20, VIDEO=21, VIDEO3D=22, FIREWORKS=23, 
		SPEECH=24, TEXT=25, FILENAME=26, TEXT_CONTENT=27, LOOP=28, SIMULATION=29, 
		GPX=30, NMEA=31, METEO=32, AROME=33, ARPEGE=34, MODEL=35, BOOLEAN=36, 
		AUDIO=37, SPEED=38, HEIGHT=39, R=40, G=41, B=42, A=43, PILOTCHART=44, 
		AVURNAV=45, NAC=46, BBOX=47, LAYER=48, MOVE=49, FLYTO=50, CAMERA=51, ALTIMETRY=52, 
		EMODNET=53, GEBCO=54, HOMONIM=55, SONAR=56, LITTO3D=57, BATHYMETRY=58, 
		OCEANOGRAPHY=59, TIDES=60, CURRENTS=61, FORECAST=62, TYPE=63, STATIC=64, 
		DYNAMIC=65, OCEANOGRAM=66, TIDALATLAS=67, SURFACE=68, MIDDLE=69, BOTTOM=70, 
		MAX=71, CHART=72, RASTER=73, VECTOR=74, MBTILES=75, SHOM=76, OPEN_SEA_MAP=77, 
		OPEN_TOPO_MAP=78, DEPARE=79, HRBARE=80, RESARE=81, BUOYAGE=82, STATIC_LIGHT=83, 
		DYNAMIC_LIGHT=84, WRECKS=85, NAME=86, SAINT_BARTHELEMY=87, SAINT_MARTIN=88, 
		GUADELOUPE=89, FINISTERE=90, LANGUEDOC_ROUSSILLON=91, PROVENCE=92, EPARSES=93, 
		MAYOTTE=94, REUNION=95, NORMANDIE=96, BRETAGNE=97, IROISE=98, MORBIHAN=99, 
		RANCE=100, CORSE=101, MANCHE=102, FROMVEUR=103;
	public static final int
		RULE_scenario = 0, RULE_comment = 1, RULE_command = 2, RULE_multimediaCommand = 3, 
		RULE_multimediaType = 4, RULE_lonlat = 5, RULE_image = 6, RULE_image3D = 7, 
		RULE_video = 8, RULE_video3D = 9, RULE_fireworks = 10, RULE_navigationCommand = 11, 
		RULE_pilotchart = 12, RULE_nac = 13, RULE_simulationCommand = 14, RULE_gpx = 15, 
		RULE_nmea = 16, RULE_meteo = 17, RULE_arome = 18, RULE_arpege = 19, RULE_filename = 20, 
		RULE_model = 21, RULE_boolean = 22, RULE_audio = 23, RULE_speed = 24, 
		RULE_height = 25, RULE_color = 26, RULE_layerCommand = 27, RULE_bathymetry = 28, 
		RULE_sonar = 29, RULE_litto3D = 30, RULE_oceanography = 31, RULE_tidesCommand = 32, 
		RULE_currentsCommand = 33, RULE_forecastCommand = 34, RULE_type = 35, 
		RULE_oceanogram = 36, RULE_oceano2D = 37, RULE_max = 38, RULE_oceano3D = 39, 
		RULE_manche = 40, RULE_fromveur = 41, RULE_iroise = 42, RULE_tidalAtlas = 43, 
		RULE_staticCommand = 44, RULE_dynamicCommand = 45, RULE_layer = 46, RULE_moveCommand = 47, 
		RULE_coordinate = 48, RULE_altitude = 49, RULE_chart = 50, RULE_rasterType = 51, 
		RULE_vectorType = 52, RULE_mbtilesType = 53, RULE_name = 54, RULE_shom = 55, 
		RULE_bbox = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"scenario", "comment", "command", "multimediaCommand", "multimediaType", 
			"lonlat", "image", "image3D", "video", "video3D", "fireworks", "navigationCommand", 
			"pilotchart", "nac", "simulationCommand", "gpx", "nmea", "meteo", "arome", 
			"arpege", "filename", "model", "boolean", "audio", "speed", "height", 
			"color", "layerCommand", "bathymetry", "sonar", "litto3D", "oceanography", 
			"tidesCommand", "currentsCommand", "forecastCommand", "type", "oceanogram", 
			"oceano2D", "max", "oceano3D", "manche", "fromveur", "iroise", "tidalAtlas", 
			"staticCommand", "dynamicCommand", "layer", "moveCommand", "coordinate", 
			"altitude", "chart", "rasterType", "vectorType", "mbtilesType", "name", 
			"shom", "bbox"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "' '", "'\\t'", "'2D'", "'3D'", null, null, "','", null, null, 
			null, null, "'http://'", "'https://'", null, null, null, "'*'", null, 
			"'image'", "'image3D'", "'video'", "'video3D'", "'fireworks'", "'speech'", 
			"'text'", null, null, "'loop'", "'simulation'", "'gpx'", "'nmea'", "'meteo'", 
			"'arome'", "'arpege'", null, null, null, null, null, null, null, null, 
			null, "'pilotchart'", "'avurnav'", null, "'bbox'", "'layer'", "'move'", 
			"'flyTo'", "'camera'", "'altimetry'", "'emodnet'", "'gebco'", "'homonim'", 
			"'sonar'", "'litto3D'", "'bathymetry'", "'oceanography'", "'tides'", 
			"'currents'", "'forecast'", "'type'", "'static'", "'dynamic'", "'oceanogram'", 
			"'tidalAtlas'", "'surface'", "'middle'", "'bottom'", "'max'", "'chart'", 
			"'raster'", "'vector'", "'mbtiles'", "'SHOM'", "'openseaMap'", "'openTopoMap'", 
			"'depare'", "'hrbare'", "'resare'", "'buoyage'", "'staticLight'", "'dynamicLight'", 
			"'wrecks'", null, "'Saint-Barthelemy'", "'Saint-Martin'", "'Guadeloupe'", 
			"'Finistere'", "'Languedoc-Roussillon'", "'Provence'", "'Eparses'", "'Mayotte'", 
			"'Reunion'", "'Normandie'", "'Bretagne'", "'iroise'", "'Morbihan'", "'Rance'", 
			"'Corse'", "'manche'", "'fromveur'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "EMPTY_LINE", "CONTENT", "SEP", "SIGN", 
			"NUMBER", "WORD", "DIGIT", "HTTP", "HTTPS", "PATH", "EXTENSION", "WS", 
			"STAR", "NL", "IMAGE", "IMAGE3D", "VIDEO", "VIDEO3D", "FIREWORKS", "SPEECH", 
			"TEXT", "FILENAME", "TEXT_CONTENT", "LOOP", "SIMULATION", "GPX", "NMEA", 
			"METEO", "AROME", "ARPEGE", "MODEL", "BOOLEAN", "AUDIO", "SPEED", "HEIGHT", 
			"R", "G", "B", "A", "PILOTCHART", "AVURNAV", "NAC", "BBOX", "LAYER", 
			"MOVE", "FLYTO", "CAMERA", "ALTIMETRY", "EMODNET", "GEBCO", "HOMONIM", 
			"SONAR", "LITTO3D", "BATHYMETRY", "OCEANOGRAPHY", "TIDES", "CURRENTS", 
			"FORECAST", "TYPE", "STATIC", "DYNAMIC", "OCEANOGRAM", "TIDALATLAS", 
			"SURFACE", "MIDDLE", "BOTTOM", "MAX", "CHART", "RASTER", "VECTOR", "MBTILES", 
			"SHOM", "OPEN_SEA_MAP", "OPEN_TOPO_MAP", "DEPARE", "HRBARE", "RESARE", 
			"BUOYAGE", "STATIC_LIGHT", "DYNAMIC_LIGHT", "WRECKS", "NAME", "SAINT_BARTHELEMY", 
			"SAINT_MARTIN", "GUADELOUPE", "FINISTERE", "LANGUEDOC_ROUSSILLON", "PROVENCE", 
			"EPARSES", "MAYOTTE", "REUNION", "NORMANDIE", "BRETAGNE", "IROISE", "MORBIHAN", 
			"RANCE", "CORSE", "MANCHE", "FROMVEUR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "scenario.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public scenarioParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScenarioContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(scenarioParser.EOF, 0); }
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<TerminalNode> EMPTY_LINE() { return getTokens(scenarioParser.EMPTY_LINE); }
		public TerminalNode EMPTY_LINE(int i) {
			return getToken(scenarioParser.EMPTY_LINE, i);
		}
		public ScenarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenario; }
	}

	public final ScenarioContext scenario() throws RecognitionException {
		ScenarioContext _localctx = new ScenarioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_scenario);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70L) != 0)) {
				{
				{
				setState(114);
				comment();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EMPTY_LINE || _la==STAR) {
				{
				setState(122);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STAR:
					{
					setState(120);
					command();
					}
					break;
				case EMPTY_LINE:
					{
					setState(121);
					match(EMPTY_LINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentContext extends ParserRuleContext {
		public TerminalNode CONTENT() { return getToken(scenarioParser.CONTENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__1) {
				{
				{
				setState(129);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(CONTENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public TerminalNode STAR() { return getToken(scenarioParser.STAR, 0); }
		public BboxContext bbox() {
			return getRuleContext(BboxContext.class,0);
		}
		public LayerCommandContext layerCommand() {
			return getRuleContext(LayerCommandContext.class,0);
		}
		public MoveCommandContext moveCommand() {
			return getRuleContext(MoveCommandContext.class,0);
		}
		public ChartContext chart() {
			return getRuleContext(ChartContext.class,0);
		}
		public NavigationCommandContext navigationCommand() {
			return getRuleContext(NavigationCommandContext.class,0);
		}
		public SimulationCommandContext simulationCommand() {
			return getRuleContext(SimulationCommandContext.class,0);
		}
		public MultimediaCommandContext multimediaCommand() {
			return getRuleContext(MultimediaCommandContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(STAR);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__1) {
				{
				{
				setState(138);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(144);
				bbox();
				}
				break;
			case 2:
				{
				setState(145);
				layerCommand();
				}
				break;
			case 3:
				{
				setState(146);
				moveCommand();
				}
				break;
			case 4:
				{
				setState(147);
				chart();
				}
				break;
			case 5:
				{
				setState(148);
				navigationCommand();
				}
				break;
			case 6:
				{
				setState(149);
				simulationCommand();
				}
				break;
			case 7:
				{
				setState(150);
				multimediaCommand();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultimediaCommandContext extends ParserRuleContext {
		public TerminalNode STAR() { return getToken(scenarioParser.STAR, 0); }
		public MultimediaTypeContext multimediaType() {
			return getRuleContext(MultimediaTypeContext.class,0);
		}
		public MultimediaCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multimediaCommand; }
	}

	public final MultimediaCommandContext multimediaCommand() throws RecognitionException {
		MultimediaCommandContext _localctx = new MultimediaCommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_multimediaCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(STAR);
			setState(154);
			multimediaType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultimediaTypeContext extends ParserRuleContext {
		public TerminalNode IMAGE() { return getToken(scenarioParser.IMAGE, 0); }
		public TerminalNode IMAGE3D() { return getToken(scenarioParser.IMAGE3D, 0); }
		public TerminalNode VIDEO() { return getToken(scenarioParser.VIDEO, 0); }
		public TerminalNode VIDEO3D() { return getToken(scenarioParser.VIDEO3D, 0); }
		public TerminalNode FIREWORKS() { return getToken(scenarioParser.FIREWORKS, 0); }
		public TerminalNode TEXT() { return getToken(scenarioParser.TEXT, 0); }
		public MultimediaTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multimediaType; }
	}

	public final MultimediaTypeContext multimediaType() throws RecognitionException {
		MultimediaTypeContext _localctx = new MultimediaTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_multimediaType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 49807360L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LonlatContext extends ParserRuleContext {
		public List<TerminalNode> NUMBER() { return getTokens(scenarioParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(scenarioParser.NUMBER, i);
		}
		public List<TerminalNode> SEP() { return getTokens(scenarioParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(scenarioParser.SEP, i);
		}
		public LonlatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lonlat; }
	}

	public final LonlatContext lonlat() throws RecognitionException {
		LonlatContext _localctx = new LonlatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lonlat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(NUMBER);
			setState(159);
			match(SEP);
			setState(160);
			match(NUMBER);
			setState(161);
			match(SEP);
			setState(162);
			match(NUMBER);
			setState(163);
			match(SEP);
			setState(164);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImageContext extends ParserRuleContext {
		public TerminalNode IMAGE() { return getToken(scenarioParser.IMAGE, 0); }
		public TerminalNode SEP() { return getToken(scenarioParser.SEP, 0); }
		public TerminalNode FILENAME() { return getToken(scenarioParser.FILENAME, 0); }
		public ImageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_image; }
	}

	public final ImageContext image() throws RecognitionException {
		ImageContext _localctx = new ImageContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_image);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(IMAGE);
			setState(167);
			match(SEP);
			setState(168);
			match(FILENAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Image3DContext extends ParserRuleContext {
		public TerminalNode IMAGE3D() { return getToken(scenarioParser.IMAGE3D, 0); }
		public List<TerminalNode> SEP() { return getTokens(scenarioParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(scenarioParser.SEP, i);
		}
		public TerminalNode FILENAME() { return getToken(scenarioParser.FILENAME, 0); }
		public LonlatContext lonlat() {
			return getRuleContext(LonlatContext.class,0);
		}
		public Image3DContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_image3D; }
	}

	public final Image3DContext image3D() throws RecognitionException {
		Image3DContext _localctx = new Image3DContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_image3D);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(IMAGE3D);
			setState(171);
			match(SEP);
			setState(172);
			match(FILENAME);
			setState(173);
			match(SEP);
			setState(174);
			lonlat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VideoContext extends ParserRuleContext {
		public TerminalNode VIDEO() { return getToken(scenarioParser.VIDEO, 0); }
		public TerminalNode SEP() { return getToken(scenarioParser.SEP, 0); }
		public TerminalNode FILENAME() { return getToken(scenarioParser.FILENAME, 0); }
		public VideoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_video; }
	}

	public final VideoContext video() throws RecognitionException {
		VideoContext _localctx = new VideoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_video);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(VIDEO);
			setState(177);
			match(SEP);
			setState(178);
			match(FILENAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Video3DContext extends ParserRuleContext {
		public TerminalNode VIDEO3D() { return getToken(scenarioParser.VIDEO3D, 0); }
		public TerminalNode SEP() { return getToken(scenarioParser.SEP, 0); }
		public TerminalNode FILENAME() { return getToken(scenarioParser.FILENAME, 0); }
		public Video3DContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_video3D; }
	}

	public final Video3DContext video3D() throws RecognitionException {
		Video3DContext _localctx = new Video3DContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_video3D);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(VIDEO3D);
			setState(181);
			match(SEP);
			setState(182);
			match(FILENAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FireworksContext extends ParserRuleContext {
		public TerminalNode FIREWORKS() { return getToken(scenarioParser.FIREWORKS, 0); }
		public TerminalNode SEP() { return getToken(scenarioParser.SEP, 0); }
		public LonlatContext lonlat() {
			return getRuleContext(LonlatContext.class,0);
		}
		public FireworksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fireworks; }
	}
